# 6502

./: .gitignore  CMakeLists.txt  Readme.md
headers/: cartridge.h  cpu.h  file_handler.h  instructions.h  logger.h
headers/ui/: gui.h
src/: cartridge.c  cpu.c  cpu.cpp  file_handler.cpp  gui.c  gui.cpp  instructions.cpp  logger.c  main.c  main.cpp
src/ui/: gui.c
tests/: cpu_tests.cpp  instruction_tests.cpp  main.cpp
